# kakao-quizbot-for-contest

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: config.rs  conn.rs  error.rs  game.rs  main.rs  skill.rs
src/game/: db.rs  mod.rs  model.rs  state.rs  temp_inmemory_db.rs
src/web/: mod.rs  model.rs  mw_auth.rs  routes_bot_request.rs
