[package]
name = "kakao-quizbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = "0.7.4"
bb8 = "0.8.3"
bb8-redis = "0.14.0"
csv = "1.3.0"
kakao-rs = "0.3.6"
lazy_static = "1.4.0"
rand = "0.8.5"
redis = { version = "0.24.0", features = ["tokio-comp"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.6.1"
strum_macros = "0.26.1"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
